Add siteId to listen-for-wake
